minikube/nginx/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80

--- # service that expose the network of pods
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  # type: NodePort  # Change to LoadBalancer if on cloud
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      # nodePort: 30002
# Appling this manifest creates a new service named "nginx-service" with the service type [NodePort](typesOfServices.md). The Service targets target TCP port 80 on any port with the `nginx` label.
